prod/apps/gitea-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: git
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - "git.korab.space"
    - "gitea.korab.space"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea-http
          port: 3000
