prod/apps/semaphore-httproute.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app: semaphore
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: semaphore
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app: semaphore
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - "semaphore.korab.space"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: semaphore
          port: 80
